==> liuholin/pose_estimate_web/Pose_Main_v4.0.1/Driver/vl53l0x.c <==
#include "vl53l0x.h"
#define adjust_num 5//校准错误次数

VL53L0X_Error vl53l0x_init(VL53L0X_Dev_t *dev)
{
	VL53L0X_Error Status = VL53L0X_ERROR_NONE;
	VL53L0X_Dev_t *pMyDevice = dev;
	GPIO_InitTypeDef  GPIO_InitStructure;
	//   RCC->APB2ENR|=1<<2;     //使能PORTA时钟 
	//GPIOA->CRH&=0X0FFFFFFF;	//PA15设置成推挽输出	  
	//GPIOA->CRH|=0X30000000; 
	//JTAG_Set(SWD_ENABLE);	//禁止JTAG,从而PA15可以做普通IO使用,否则PA15不能做普通IO!!!
	/*-------------------------------------------------------------------*/
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; //PB8设置成推挽输出
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	/*-------------------------------------------------------------------*/
	pMyDevice->I2cDevAddr = VL53L0X_Addr;//I2C地址(上电默认0x52)
	pMyDevice->comms_type = 1;           //I2C通信模式
	pMyDevice->comms_speed_khz = 400;    //I2C通信速率

										 //VL53L0X_i2c_init();//初始化IIC总线
	I2c_Soft_Init();

	I2C_FastMode = 0;

	//VL53L0X_Xshut=0;//失能VL53L0X
	GPIOB->BRR = GPIO_Pin_8;
	Delay_ms(30);
	//VL53L0X_Xshut=1;//使能VL53L0X,让传感器处于工作
	GPIOB->BSRR = GPIO_Pin_8;
	Delay_ms(30);

	Status = vl53l0x_Addr_set(pMyDevice, (SET_VL53L0X_Addr >>1));//设置VL53L0X传感器I2C地址
	if (Status != VL53L0X_ERROR_NONE) goto error;

	Status = VL53L0X_DataInit(pMyDevice);//设备初始化
	if (Status != VL53L0X_ERROR_NONE) goto error;
	Delay_ms(2);

	Status = VL53L0X_GetDeviceInfo(pMyDevice, &vl53l0x_dev_info);//获取设备ID信息
	if (Status != VL53L0X_ERROR_NONE) goto error;

	//AT24CXX_Read(0,(u8*)&Vl53l0x_data,sizeof(_vl53l0x_adjust));//读取24c02保存的校准数据,若已校准 Vl53l0x_data.adjustok==0xAA

	if (Vl53l0x_data.adjustok == 0xAA)//已校准
		AjustOK = 1;
	else //没校准	
		AjustOK = 0;

error:
	if (Status != VL53L0X_ERROR_NONE)
	{
		//print_pal_error(Status);//打印错误信息
		return Status;
	}

	return Status;
}

void vl53l0x_reset(VL53L0X_Dev_t *dev)
{
	uint8_t addr;
	addr = dev->I2cDevAddr;//保存设备原I2C地址
	//VL53L0X_Xshut = 0;//失能VL53L0X
	GPIOB->BRR = GPIO_Pin_8;
	Delay_ms(30);
	//VL53L0X_Xshut = 1;//使能VL53L0X,让传感器处于工作(I2C地址会恢复默认0X52)
	GPIOB->BSRR = GPIO_Pin_8;
	Delay_ms(30);
	dev->I2cDevAddr = VL53L0X_Addr;
	vl53l0x_Addr_set(dev, addr);//设置VL53L0X传感器原来上电前原I2C地址
	VL53L0X_DataInit(dev);
}

VL53L0X_Error vl53l0x_adjust(VL53L0X_Dev_t *dev)
{

	VL53L0X_DeviceError Status = VL53L0X_ERROR_NONE;
	uint32_t refSpadCount = 7;
	uint8_t  isApertureSpads = 0;
	uint32_t XTalkCalDistance = 100;
	uint32_t XTalkCompensationRateMegaCps;
	uint32_t CalDistanceMilliMeter = 100 << 16;
	int32_t  OffsetMicroMeter = 30000;
	uint8_t VhvSettings = 23;
	uint8_t PhaseCal = 1;
	u8 i = 0;

	VL53L0X_StaticInit(dev);//数值恢复默认,传感器处于空闲状态
/*-------------------------------SPADS校准------------------------------*/
spads:
	Delay_ms(10);

	Status = VL53L0X_PerformRefSpadManagement(dev, &refSpadCount, &isApertureSpads);//执行参考Spad管理
	if (Status == VL53L0X_ERROR_NONE)
	{
		//printf("refSpadCount = %d\r\n", refSpadCount);
		Vl53l0x_adjust.refSpadCount = refSpadCount;
		//printf("isApertureSpads = %d\r\n", isApertureSpads);
		Vl53l0x_adjust.isApertureSpads = isApertureSpads;
		//printf("The SPADS Calibration Finish...\r\n\r\n");
		i = 0;
	}
	else
	{
		i++;
		if (i == adjust_num) return Status;
		/*printf("SPADS Calibration Error,Restart this step\r\n")*/;
		goto spads;
	}
/*-------------------------------------------设备参考校准---------------------------------------------------*/
ref:
	Delay_ms(10);
	Status = VL53L0X_PerformRefCalibration(dev, &VhvSettings, &PhaseCal);//Ref参考校准
	if (Status == VL53L0X_ERROR_NONE)
	{
		//printf("VhvSettings = %d\r\n", VhvSettings);
		Vl53l0x_adjust.VhvSettings = VhvSettings;
		//printf("PhaseCal = %d\r\n", PhaseCal);
		Vl53l0x_adjust.PhaseCal = PhaseCal;
		//printf("The Ref Calibration Finish...\r\n\r\n");
		i = 0;
	}
	else
	{
		i++;
		if (i == adjust_num) return Status;
		/*printf("Ref Calibration Error,Restart this step\r\n")*/;
		goto ref;
	}
/*---------------------------------------------偏移校准------------------------------------------------*/
offset:
	Delay_ms(10);
	//printf("Offset Calibration:need a white target,in black space,and the distance keep 100mm!\r\n");
	//printf("The Offset Calibration Start...\r\n");
	Status = VL53L0X_PerformOffsetCalibration(dev, CalDistanceMilliMeter, &OffsetMicroMeter);//偏移校准
	if (Status == VL53L0X_ERROR_NONE)
	{
		//printf("CalDistanceMilliMeter = %d mm\r\n", CalDistanceMilliMeter);
		Vl53l0x_adjust.CalDistanceMilliMeter = CalDistanceMilliMeter;
		//printf("OffsetMicroMeter = %d mm\r\n", OffsetMicroMeter);
		Vl53l0x_adjust.OffsetMicroMeter = OffsetMicroMeter;
		//printf("The Offset Calibration Finish...\r\n\r\n");
		i = 0;
	}
	else
	{
		i++;
		if (i == adjust_num) return Status;
		/*printf("Offset Calibration Error,Restart this step\r\n")*/;
		goto offset;
	}
/*----------------------------------------------串扰校准-----------------------------------------------------*/
xtalk:
	Delay_ms(20);
	//printf("Cross Talk Calibration:need a grey target\r\n");
	//printf("The Cross Talk Calibration Start...\r\n");
	Status = VL53L0X_PerformXTalkCalibration(dev, XTalkCalDistance, &XTalkCompensationRateMegaCps);//串扰校准
	if (Status == VL53L0X_ERROR_NONE)
	{
		//printf("XTalkCalDistance = %d mm\r\n", XTalkCalDistance);
		Vl53l0x_adjust.XTalkCalDistance = XTalkCalDistance;
		//printf("XTalkCompensationRateMegaCps = %d\r\n", XTalkCompensationRateMegaCps);
		Vl53l0x_adjust.XTalkCompensationRateMegaCps = XTalkCompensationRateMegaCps;
		//printf("The Cross Talk Calibration Finish...\r\n\r\n");
		i = 0;
	}
	else
	{
		i++;
		if (i == adjust_num) return Status;
		/*printf("Cross Talk Calibration Error,Restart this step\r\n")*/;
		goto xtalk;
	}
	//LED1 = 1;
	//printf("All the Calibration has Finished!\r\n");
	//printf("Calibration is successful!!\r\n");

	Vl53l0x_adjust.adjustok = 0xAA;//校准成功
	//AT24CXX_Write(0, (u8*)&Vl53l0x_adjust, sizeof(_vl53l0x_adjust));//将校准数据保存到24c02
	memcpy(&Vl53l0x_data, &Vl53l0x_adjust, sizeof(_vl53l0x_adjust));//将校准数据复制到Vl53l0x_data结构体
	return Status;
}
