==> Gradeyyy/biai-glass/VL53L0X/demo/vl53l0x.c <==
#include "vl53l0x.h"
#include <stdio.h>

void vl53l0x_reset(VL53L0X_Dev_t *dev)
{
	uint8_t addr;
  
  /*保存设备原I2C地址*/
	addr = dev->I2cDevAddr; 
  /*失能VL53L0X*/
  LV_DISABLE(LV_XSH_PORT ,LV_XSH_PIN) ;
	HAL_Delay(30);
  
  /*使能VL53L0X,让传感器处于工作(I2C地址会恢复默认0X52)*/
	LV_ENABLE(LV_XSH_PORT ,LV_XSH_PIN) ; 
	HAL_Delay(30);	
  
	dev->I2cDevAddr=0x52;
  
  /*设置VL53L0X传感器原来上电前原I2C地址*/
	vl53l0x_Addr_set(dev,addr);          
	VL53L0X_DataInit(dev);	
}

VL53L0X_Error vl53l0x_init(VL53L0X_Dev_t *dev)
{
	VL53L0X_Error Status = VL53L0X_ERROR_NONE;
	VL53L0X_Dev_t *pMyDevice = dev;
	__HAL_RCC_GPIOA_CLK_ENABLE();
	GPIO_InitTypeDef GPIO_InitStruct = {0};
  
	
  /*Configure GPIO pin : PtPin */
  /*Configure GPIO pin : PtPin */
  GPIO_InitStruct.Pin = LV_XSH_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_MEDIUM;
  HAL_GPIO_Init(LV_XSH_PORT, &GPIO_InitStruct);

  /*I2C地址(上电默认0x52)*/
	pMyDevice->I2cDevAddr = VL53L0X_Addr; 
  /*I2C通信模式*/
	pMyDevice->comms_type = 1; 
  /*I2C通信速率*/
	pMyDevice->comms_speed_khz = 400;                
	
  /*初始化IIC*/
	VL53L0X_i2c_init();  
  
	/*失能VL53L0X*/
	LV_DISABLE(LV_XSH_PORT, LV_XSH_PIN) ;           
	HAL_Delay(30);
  
  /*使能VL53L0X,让传感器处于工作*/
	LV_ENABLE(LV_XSH_PORT, LV_XSH_PIN);              
	HAL_Delay(30);
	
  /*设置VL53L0X传感器I2C地址*/
	vl53l0x_Addr_set(pMyDevice,0x54);                
	if(Status!=VL53L0X_ERROR_NONE) 
	  goto error;
  
  /*设备初始化*/
	Status = VL53L0X_DataInit(pMyDevice);            
	if(Status!=VL53L0X_ERROR_NONE) 
		goto error;
	HAL_Delay(2);
  
  /*获取设备ID信息*/
	Status = VL53L0X_GetDeviceInfo(pMyDevice,&vl53l0x_dev_info);
	if(Status!=VL53L0X_ERROR_NONE) goto error;
//	vl53l0x_calibration_test(&vl53l0x_dev);
  /*已校准*/
	if(Vl53l0x_data.adjustok==0xAA)                  
	  AjustOK=1;
  /*没校准	*/	
	else                                             
	  AjustOK=0;
	
	error:
	if(Status!=VL53L0X_ERROR_NONE)
	{
		print_pal_error(Status);   /*打印错误信息*/                   
		return Status;
	}
  	
	return Status;
}

VL53L0X_Error vl53l0x_adjust(VL53L0X_Dev_t *dev) {

	VL53L0X_DeviceError Status = VL53L0X_ERROR_NONE;
	uint32_t refSpadCount = 7;
	uint8_t isApertureSpads = 0;
	uint32_t XTalkCalDistance = 100;
	uint32_t XTalkCompensationRateMegaCps;
	uint32_t CalDistanceMilliMeter = 100;		//100 << 16;
	int32_t OffsetMicroMeter = 0;				// 30000;
	uint8_t VhvSettings = 23;
	uint8_t PhaseCal = 1;
	uint8_t i = 0;

	VL53L0X_StaticInit(dev);   //数值恢复默认,传感器处于空闲状态
	//SPADS校准----------------------------
	spads: HAL_Delay(10);
	printf("The SPADS Calibration Start...\r\n");
	Status = VL53L0X_PerformRefSpadManagement(dev, &refSpadCount,
			&isApertureSpads);	//执行参考Spad管理
	if (Status == VL53L0X_ERROR_NONE) {
//		printf("refSpadCount = %d\r\n", refSpadCount);
		Vl53l0x_adjust.refSpadCount = refSpadCount;
		printf("isApertureSpads = %d\r\n", isApertureSpads);
		Vl53l0x_adjust.isApertureSpads = isApertureSpads;
//		printf("The SPADS Calibration Finish...\r\n\r\n");
		i = 0;
	} else {
		i++;
		if (i == adjust_num)
			return Status;
//		printf("SPADS Calibration Error,Restart this step\r\n");
		goto spads;
	}
	//设备参考校准---------------------------------------------------
	ref: HAL_Delay(10);
//	printf("The Ref Calibration Start...\r\n");
	Status = VL53L0X_PerformRefCalibration(dev, &VhvSettings, &PhaseCal);//Ref参考校准
	if (Status == VL53L0X_ERROR_NONE) {
//		printf("VhvSettings = %d\r\n", VhvSettings);
		Vl53l0x_adjust.VhvSettings = VhvSettings;
//		printf("PhaseCal = %d\r\n", PhaseCal);
		Vl53l0x_adjust.PhaseCal = PhaseCal;
//		printf("The Ref Calibration Finish...\r\n\r\n");
		i = 0;
	} else {
		i++;
		if (i == adjust_num)
			return Status;
//		printf("Ref Calibration Error,Restart this step\r\n");
		goto ref;
	}
	//偏移校准------------------------------------------------
	offset: HAL_Delay(10);
//	printf(
//			"Offset Calibration:need a white target,in black space,and the distance keep 100mm!\r\n");
//	printf("The Offset Calibration Start...\r\n");

	Status = VL53L0X_PerformOffsetCalibration(dev, CalDistanceMilliMeter,
			&OffsetMicroMeter);	//偏移校准
	if (Status == VL53L0X_ERROR_NONE) {
//		printf("CalDistanceMilliMeter = %d mm\r\n", CalDistanceMilliMeter);
		Vl53l0x_adjust.CalDistanceMilliMeter = CalDistanceMilliMeter;
//		printf("OffsetMicroMeter = %d um\r\n", OffsetMicroMeter);
		Vl53l0x_adjust.OffsetMicroMeter = OffsetMicroMeter;
		printf("The Offset Calibration Finish...\r\n\r\n");
		i = 0;
	} else {
		i++;
		if (i == adjust_num)
			return Status;
//printf("Offset Calibration Error,Restart this step\r\n");
		goto offset;
	}
	//串扰校准-----------------------------------------------------
	xtalk: HAL_Delay(20);
//	printf("Cross Talk Calibration:need a grey target\r\n");
//	printf("The Cross Talk Calibration Start...\r\n");
	Status = VL53L0X_PerformXTalkCalibration(dev, XTalkCalDistance,
			&XTalkCompensationRateMegaCps);	//串扰校准
	if (Status == VL53L0X_ERROR_NONE) {
	//	printf("XTalkCalDistance = %d mm\r\n", XTalkCalDistance);
		Vl53l0x_adjust.XTalkCalDistance = XTalkCalDistance;
//		printf("XTalkCompensationRateMegaCps = %d\r\n",
//				XTalkCompensationRateMegaCps);
		Vl53l0x_adjust.XTalkCompensationRateMegaCps =
				XTalkCompensationRateMegaCps;
//		printf("The Cross Talk Calibration Finish...\r\n\r\n");
		i = 0;
	} else {
		i++;
		if (i == adjust_num)
			return Status;
//		printf("Cross Talk Calibration Error,Restart this step\r\n");
		goto xtalk;
	}
//	printf("All the Calibration has Finished!\r\n");
//	printf("Calibration is successful!!\r\n");

	Vl53l0x_adjust.adjustok = 0xAA;	//校准成功
	// 后面再做校准数据保存
	//AT24CXX_Write(0,(uint8_t*)&Vl53l0x_adjust,sizeof(_vl53l0x_adjust));//将校准数据保存到24c02
	//---------------测试代码
//	Vl53l0x_adjust.adjustok = 0xAA;
//	Vl53l0x_adjust.isApertureSpads = 0x11;
//	Vl53l0x_adjust.VhvSettings = 0x22;
//	Vl53l0x_adjust.PhaseCal = 0x33;
//	Vl53l0x_adjust.XTalkCalDistance = 0x44;
//	Vl53l0x_adjust.XTalkCompensationRateMegaCps = 0x55;
//	Vl53l0x_adjust.CalDistanceMilliMeter = 0x66;
//	Vl53l0x_adjust.OffsetMicroMeter = 0x77;
//	Vl53l0x_adjust.refSpadCount = 0x88;
	//-----------------------
//	Flash_Write(&Vl53l0x_adjust, 24);  // 数据保存到FLASH、
	memcpy(&Vl53l0x_data, &Vl53l0x_adjust, sizeof(Vl53l0x_adjust));//将校准数据复制到Vl53l0x_data结构体
	return Status;
}
